ecmascript/parser/tests/test262-error-references/fail/fe233d87f280ed04.js.stderr
error: Unexpected token `}`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/fe233d87f280ed04.js:1:10
  |
1 | p = { q/ }
  |          ^

error: Expression expected
 --> $DIR/tests/test262-parser/fail/fe233d87f280ed04.js:1:8
  |
1 | p = { q/ }
  |        ^

